--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,9 @@
     <meta name="PKdesign"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
  
-    <title>PK design</title>
+    <title>PK Design</title>
   </head>
   <body>
     <div id="root"></div>
